调整安全文件路径